whoami/04-whoami-ingress.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  annotations:
    cert-manager.io/cluster-issuer: clusterissuer
spec:
  tls:
  - hosts:
    - whoami.k.3756home.org
    secretName: whoami-secret
  rules:
    - host: whoami.k.3756home.org
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: whoami
              port:
                name: web
