whoami/httproute-st.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami
  namespace: whoami
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik

  hostnames:
    - whoami.208.98.56.209.nip.io
    - whoami.3756home.org

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/whoami"
    - backendRefs:
        - name: whoami
          port: 80
